B-68612 Tech Debt: FDA: replace Collections.emptyList() by List.of() in package dist-foreign-ui