@@ -22,6 +22,7 @@ import com.copyright.rup.dist.foreign.ui.audit.api.ICommonAuditFilterWidget;
 import com.copyright.rup.dist.foreign.ui.audit.api.sal.ISalAuditController;
 import com.copyright.rup.dist.foreign.ui.audit.api.sal.ISalAuditFilterController;
 import com.copyright.rup.vaadin.widget.SearchWidget;
+
 import com.google.common.collect.Lists;
 import com.vaadin.data.provider.CallbackDataProvider;
 import com.vaadin.data.provider.Query;
@@ -36,6 +37,7 @@ import com.vaadin.ui.HorizontalLayout;
 import com.vaadin.ui.JavaScript;
 import com.vaadin.ui.TextField;
 import com.vaadin.ui.VerticalLayout;
+
 import org.easymock.Capture;
 import org.junit.Before;
 import org.junit.Test;
@@ -46,7 +48,6 @@ import org.powermock.reflect.Whitebox;
 
 import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
@@ -108,7 +109,7 @@ public class SalAuditWidgetTest {
         Grid<?> grid = widget.getAuditGrid();
         CallbackDataProvider<?, ?> dataProvider = (CallbackDataProvider) grid.getDataProvider();
         assertEquals(1, dataProvider.size(new Query<>()));
-        Stream<?> stream = dataProvider.fetch(new Query<>(0, 1, Collections.emptyList(), null, null));
+        Stream<?> stream = dataProvider.fetch(new Query<>(0, 1, List.of(), null, null));
         assertEquals(liabilities, stream.collect(Collectors.toList()));
         assertFalse(grid.getStyleName().contains("empty-audit-grid"));
         assertEquals(0, orderCapture.getValue().size());
