@@ -39,7 +39,6 @@ import org.powermock.core.classloader.annotations.PrepareForTest;
 import org.powermock.modules.junit4.PowerMockRunner;
 import org.powermock.reflect.Whitebox;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -97,9 +96,9 @@ public class AaclScenariosControllerTest {
     @Test
     public void testGetScenarios() {
         expect(productFamilyProvider.getSelectedProductFamily()).andReturn(AACL_PRODUCT_FAMILY).once();
-        expect(scenarioService.getScenarios(AACL_PRODUCT_FAMILY)).andReturn(Collections.emptyList()).once();
+        expect(scenarioService.getScenarios(AACL_PRODUCT_FAMILY)).andReturn(List.of()).once();
         replay(scenarioService, productFamilyProvider);
-        assertEquals(Collections.emptyList(), scenariosController.getScenarios());
+        assertEquals(List.of(), scenariosController.getScenarios());
         verify(scenarioService, productFamilyProvider);
     }
 
