@@ -40,7 +40,7 @@ import org.powermock.core.classloader.annotations.PrepareForTest;
 import org.powermock.modules.junit4.PowerMockRunner;
 import org.powermock.reflect.Whitebox;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 
 /**
@@ -134,9 +134,9 @@ public class SalScenariosControllerTest {
     @Test
     public void testGetScenarios() {
         expect(productFamilyProvider.getSelectedProductFamily()).andReturn(SAL_PRODUCT_FAMILY).once();
-        expect(scenarioService.getScenarios(SAL_PRODUCT_FAMILY)).andReturn(Collections.emptyList()).once();
+        expect(scenarioService.getScenarios(SAL_PRODUCT_FAMILY)).andReturn(List.of()).once();
         replay(scenarioService, productFamilyProvider);
-        assertEquals(Collections.emptyList(), scenariosController.getScenarios());
+        assertEquals(List.of(), scenariosController.getScenarios());
         verify(scenarioService, productFamilyProvider);
     }
 
