@@ -49,7 +49,6 @@ import java.time.LocalDate;
 import java.time.ZoneId;
 import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Set;
@@ -149,7 +148,7 @@ public class AclGrantDetailWidgetTest {
         setSpecialistExpectations();
         expect(JavaScript.getCurrent()).andReturn(createMock(JavaScript.class)).times(2);
         expect(controller.getBeansCount()).andReturn(1).once();
-        expect(controller.loadBeans(0, Integer.MAX_VALUE, Collections.emptyList())).andReturn(grantDetails).once();
+        expect(controller.loadBeans(0, Integer.MAX_VALUE, List.of())).andReturn(grantDetails).once();
         replay(JavaScript.class, ForeignSecurityUtils.class, controller, streamSource);
         initWidget();
         Grid grid = (Grid) ((VerticalLayout) aclGrantDetailWidget.getSecondComponent()).getComponent(1);
